--- a/src/themes/mediary/css/styles.less
+++ b/src/themes/mediary/css/styles.less
@@ -25,18 +25,22 @@ body.not-casparcg {
   visibility: hidden;
 }
 
-#countdown .timer {
+#countdown {
   font-family: Poppins-Bold;
   font-size: 3vh;
-  background: #777;
-  color: #fff;
   position: absolute;
   top: 12vh;
   left: 8vw;
-  /* width to be auto sized? */
-  height: 5vh; /* to be 0px for anim-on */
+  background: #777;
+  color: #fff;
+  height: 0vh; /* animates on */
   z-index: 10;
-  padding: 0.5vh 1vw;
+  overflow: hidden;
+}
+
+#countdown .timer {
+  padding: 0.5vh 0;
+  margin: 0 auto;
 }
 
 .vertical-align {
