change font to Droid Sans Mono

--- a/src/themes/mediary/css/styles.less
+++ b/src/themes/mediary/css/styles.less
@@ -12,8 +12,8 @@ body {
     -webkit-font-smoothing:antialiased !important;
 }
 @font-face {
-    font-family: Poppins-Bold;
-    src: url('../fonts/Poppins-Bold.ttf');
+    font-family: 'droid_sans_monoregular';
+    src: url('../fonts/DroidSansMono-webfont.woff') format('woff');
 }
 
 // give us a background colour when we aren't running in CasparCG
@@ -26,7 +26,7 @@ body.not-casparcg {
 }
 
 #countdown {
-  font-family: Poppins-Bold;
+  font-family: droid_sans_monoregular;
   font-size: 3vh;
   position: absolute;
   top: 12vh;
