--- a/src/themes/mediary/css/styles.less
+++ b/src/themes/mediary/css/styles.less
@@ -39,8 +39,7 @@ body.not-casparcg {
 }
 
 #countdown .timer {
-  padding: 0.5vh 0;
-  margin: 0 auto;
+  font-weight: bold;
 }
 
 .vertical-align {
